--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
+    "lodash": "^4.17.15",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
     "prettier": "^1.19.1",
