--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "apollo-server-hapi": "^2.9.14",
     "babel-jest": "^24.9.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
