--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
     "prettier": "^1.19.1",
+    "request-promise": "^4.2.5",
     "sequelize": "^5.21.3"
   }
 }
