--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/tarixgit/master_arbeit#readme",
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
+    "apollo-server": "^2.13.1",
     "apollo-server-hapi": "^2.9.14",
     "babel-jest": "^24.9.0",
     "body-parser": "^1.19.0",
