--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg-hstore": "^2.3.3",
     "prettier": "^1.19.1",
     "request-promise": "^4.2.5",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "web3": "^1.2.9"
   }
 }
