--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "prettier": "^1.19.1",
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.3",
-    "web3": "^1.2.9"
+    "web3": "2.0.0-alpha.1"
   }
 }
