--- a/package.json
+++ b/package.json
@@ -54,5 +54,11 @@
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.3",
     "web3": "2.0.0-alpha.1"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false,
+    "printWidth": 120
   }
 }
