--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hapi/hapi": "^18.4.0",
     "apollo-server": "^2.13.1",
     "apollo-server-hapi": "^2.9.14",
+    "axios": "^0.19.2",
     "babel-jest": "^24.9.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -48,11 +49,13 @@
     "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
+    "node-html-parser": "^1.2.20",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
     "prettier": "^1.19.1",
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.3",
+    "tough-cookie": "3.0.1",
     "web3": "2.0.0-alpha.1"
   },
   "prettier": {
